# inspect_harbor

./: .gitattributes  .gitignore  .nojekyll  .release-please-config.json  .typos.toml  CHANGELOG.html  CHANGELOG.html.md  CHANGELOG.html.md.sha  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  REGISTRY.md  TODO.md  advanced.html  advanced.html.md  advanced.html.md.sha  agents.html  agents.html.md  agents.html.md.sha  data.json  datasets.html  datasets.html.md  datasets.html.md.sha  endpoint.json  gen-stderr.txt  index.html  index.html.md  index.html.md.sha  listings.json  llms-full.txt  llms-guide.txt  llms.txt  parameters.html  parameters.html.md  parameters.html.md.sha  pyproject.toml  registry.html  registry.html.md  registry.html.md.sha  (+7 more)
.agents/skills/nightly-pr-triage/: SKILL.md
.claude/skills/nightly-pr-triage/: SKILL.md
.github/: CODEOWNERS
.github/actions/claude-setup/: action.yaml
.github/workflows/: build.yaml  claude-auto.yml  claude-review.yml  claude.yml  publish.yaml  release.yaml  update-registry.yml
docs/: _quarto.yml  advanced.qmd  agents.qmd  datasets.qmd  exclude.yml  index.qmd  overrides.yml  parameters.qmd  registry-listing.yml  registry.qmd  tasks.qmd
docs/_extensions/meridianlabs-ai/inspect-docs/: pre-render.py
docs/_extensions/meridianlabs-ai/inspect-docs/filters/reference/: filter.py
docs/reference/: index.qmd  inspect_harbor.qmd
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_1f9381353ea59ba3__converters_py.html  z_1f9381353ea59ba3__sandbox_utils_py.html  z_1f9381353ea59ba3__scorer_py.html  z_1f9381353ea59ba3__solver_py.html  z_1f9381353ea59ba3__task_py.html  z_35bac06aca0fcf25___init___py.html  z_35bac06aca0fcf25__registry_py.html  z_35bac06aca0fcf25__tasks_py.html  z_35bac06aca0fcf25__version_py.html  z_35bac06aca0fcf25_tasks_py.html  z_7a624b5c4faa79f5_converters_py.html  z_7a624b5c4faa79f5_sandbox_utils_py.html  z_7a624b5c4faa79f5_scorer_py.html  z_7a624b5c4faa79f5_solver_py.html  z_7a624b5c4faa79f5_task_py.html
registry/: aarr_aarri_bench.html  aarr_aarri_bench.html.md  aarr_aarri_bench.html.md.sha  abundant_swe_gen_cpp.html  abundant_swe_gen_cpp.html.md  abundant_swe_gen_cpp.html.md.sha  abundant_swe_gen_go.html  abundant_swe_gen_go.html.md  abundant_swe_gen_go.html.md.sha  abundant_swe_gen_java.html  abundant_swe_gen_java.html.md  abundant_swe_gen_java.html.md.sha  abundant_swe_gen_js.html  abundant_swe_gen_js.html.md  abundant_swe_gen_js.html.md.sha  abundant_swe_gen_rust.html  abundant_swe_gen_rust.html.md  abundant_swe_gen_rust.html.md.sha  abundant_swe_marathon.html  abundant_swe_marathon.html.md  abundant_swe_marathon.html.md.sha  actava_ai_chi_bench.html  actava_ai_chi_bench.html.md  actava_ai_chi_bench.html.md.sha  ade_bench_1_0.html  ade_bench_1_0.html.md  adyen_dabstep.html  adyen_dabstep.html.md  adyen_dabstep.html.md.sha  agentic_labs_erp_bench.html  agentic_labs_erp_bench.html.md  agentic_labs_erp_bench.html.md.sha  agentscope_ai_pawbench.html  agentscope_ai_pawbench.html.md  agentscope_ai_pawbench.html.md.sha  ai_forever_harness_bench_fast.html  ai_forever_harness_bench_fast.html.md  ai_forever_harness_bench_fast.html.md.sha  aider_polyglot.html  aider_polyglot.html.md  (+507 more)
scripts/: _http.py  _templates.py  generate_tasks.py  validate_overrides.py
src/inspect_harbor/: __init__.py  _converters.py  _registry.py  _sandbox_utils.py  _scorer.py  _solver.py  _task.py  _tasks.py  tasks.py
src/inspect_harbor/_atif/: __init__.py  client.py  convert.py  discovery.py  events.py  source.py  transcripts.py
src/inspect_harbor/_harbor/: __init__.py  converters.py  sandbox_utils.py  scorer.py  solver.py  task.py
src/inspect_harbor/harbor/: _converters.py  _sandbox_utils.py  _scorer.py  _solver.py  _task.py
tests/: test_converters.py  test_generate_tasks.py  test_registry.py  test_scorer.py  test_solver.py  test_task.py
tests/atif/: __init__.py  test_convert.py  test_event_conversion.py  test_integration.py  test_source.py
tests/fixtures/simple_task/: instruction.md  task.toml
tests/fixtures/simple_task/environment/: Dockerfile
tests/fixtures/simple_task/solution/: solve.sh
tests/fixtures/simple_task/tests/: test.sh
tests/manual/: test_all_registry_tasks.py
