[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "inspect_harbor"
dynamic = ["version"]
description = "Inspect AI interface to Harbor tasks"
authors = [{ name = "Meridian Labs" }]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT License" }
dependencies = [
    "inspect-ai>=0.3.170",
    "harbor>=0.1.43",
    "pyyaml",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Source Code" = "https://github.com/meridianlabs-ai/inspect_harbor"
"Issue Tracker" = "https://github.com/meridianlabs-ai/inspect_harbor/issues"
Documentation = "https://meridianlabs-ai.github.io/inspect_harbor/"

[project.entry-points.inspect_ai]
evals = "inspect_harbor._registry"

[dependency-groups]
dev = ["pre-commit", "pyright", "pytest", "pytest-asyncio>=1.3.0", "pytest-cov", "ruff", "types-PyYAML"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/inspect_harbor/_version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build]
only-packages = true
exclude = ["docs/", "tests/"]

[tool.uv]
managed = true
add-bounds = "lower"
default-groups = ["dev"]

[tool.mypy]
ignore_missing_imports = false
warn_unused_ignores = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "harbor.*"
ignore_missing_imports = true

[tool.pyright]
include = ["src", "tests"]
reportUnknownParameterType = true

[tool.ruff]
extend-exclude = ["docs"]
src = ["."]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # flake8
    "D",      # pydocstyle
    "I",      # isort
    "B",      # flake8-bugbear
    "SIM101", # duplicate isinstance
]
ignore = [
    "E203", # whitespace before ':'
    "E501", # line too long
    "D105", # missing docstring in magic method
    "D107", # missing docstring in __init__
    "D212", # multi-line docstring summary should start at the first line
    "D415", # first line should end with a period, question mark, or exclamation point
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
relative_files = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Filter deprecation warnings from third-party dependencies
filterwarnings = [
    "ignore::pyparsing.PyparsingDeprecationWarning",  # pyiceberg's use of pyparsing (harbor → supabase → storage3 → pyiceberg)
    "ignore::pydantic.PydanticDeprecatedSince212",    # pyiceberg's use of pydantic (harbor → supabase → storage3 → pyiceberg)
    "ignore::DeprecationWarning:harbor.models.task.config",  # harbor's deprecated field checks (storage vs storage_mb)
]
